[tool.poetry]
name = "tasty-python"
version = "0.1.0"
description = ""
authors = ["Wojtek Krzywiec"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
BeautifulSoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
